# test-versioning

./: .gitignore  Makefile.am  README.md  configure.ac  test.c
scripts/: git-version-gen.sh
